packages/social-trader/src/components/table/components/table-card/table-card.module.scss
@import "~shared/styles/_colors";
@import "~shared/styles/_breakpoint";
@import "~shared/styles/_sizes";
@import "~shared/styles/_constants";
@import "~shared/styles/_hide";

$chart-width: 160px;
$card-width: 312px;
$card-height: 372px;
$card-avatar-size: 80px;
$action-size: 30px;
$action-offset-size: 5px;

.table-card {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  padding: $padding-xsmall;
  flex-grow: 1;
  @include height($card-height, 1.2);
  background: $row-color;
  @include media-breakpoint-landscape-phone() {
    border-radius: $border-radius-middle;
    min-width: $card-width;
    width: calc(50% - #{$padding-small} / 2);
    padding: $padding-small $padding-xsmall;
  }
  @include media-breakpoint-tablet() {
    flex-grow: 0;
  }
  @media (min-width: 1075px) {
    width: calc(33.33% - #{$padding-small} / 2);
  }
  @media (min-width: 1400px) {
    width: $card-width;
  }

  &--with-offset {
    margin-bottom: $padding-small/2;
    @include media-breakpoint-landscape-phone() {
      margin-right: $padding-small/2;
    }
  }

  &__buttons {
    justify-content: center;
  }

  &__profit {
    margin-bottom: 8px;
    @include font-size($font-size-common);
  }

  &__profit-value {
    @include font-size($font-size-common);
    letter-spacing: 0.28px;
  }

  &__row {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;

    &--center {
      justify-content: center;
    }
  }

  &__broker-avatar {
    @include width($card-avatar-size);
  }

  &__title {
    @include link($text-accent-color, $text-color);
    @include font-size($font-size-paragraph);
    word-break: break-all;
    display: block;
    padding-bottom: 26px;
    @include media-breakpoint-landscape-phone() {
      padding-bottom: 0;
    }
  }

  &__title-wrapper {
    padding-top: 3px;
    max-width: calc(100% - #{$action-size + $action-offset-size});
  }

  &__name {
    @include link($primary-color);
    transition-property: color;
  }

  &__subtitle {
    max-width: 130px;
    word-break: break-all;
    @include hide-on-landscape-phone();
  }

  &__main-info {
    position: relative;
    margin-left: $padding-small/4;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    flex-grow: 1;
  }

  &__actions {
    position: absolute;
    right: 0;
    top: 0;
    cursor: pointer;
  }

  &__actions-icon {
    width: $action-size;
    height: $action-size;
  }

  &__table {
    display: flex;
    justify-content: space-between;

    &--flex-wrap {
      flex-wrap: wrap;
    }

    @include media-breakpoint-landscape-tablet() {
      &--title {
        width: 45%;

        &:first-child {
          width: 30%;
        }

        &:nth-child(2) {
          width: 25%;
        }
      }
    }
    @include media-breakpoint-phone() {
      & table {
        td {
          font-size: $font-size-common;
        }
      }
    }
  }

  &__table-column {
    display: flex;
    flex-direction: column;

    &:not(:last-child) {
      padding-right: $padding-xxsmall;
    }
  }

  &__table-row {
    width: 100%;
  }

  &__balance {
    @include font-size($font-size-common);
  }

  &__chart {
    width: $chart-width;
    flex-grow: 1;
  }
}

